--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^10.0.0",
     "sodium": "^3.0.2",
     "ytdl-core": "^4.9.1",
+    "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
   }
 }
