save global state in json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
   nodejs:
     build: .
     restart: unless-stopped
+    volumes:
+      - type: bind
+        source: ./state.json
+        target: /usr/src/app/state.json
