support for soundcloud

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-SSH_SERVER=root@myserver.com
-SSH_FOLDER=/root/discord-music-bot
+SSH_SERVER=...
+SSH_PORT=22
+SSH_FOLDER=/path/to/folder
 
 DISCORD_TOKEN="..."
 DISCORD_CHANNEL="..."
+DISCORD_GUILD="..."
