--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@discordjs/voice": "^0.8.0",
     "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
+    "play-dl": "^1.9.2",
     "sodium": "^3.0.2",
+    "soundcloud-scraper": "^5.0.2",
     "ytdl-core": "^4.11.0",
     "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
