--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "puppeteer-stream": "^2.0.9",
-    "sodium": "^3.0.2"
+    "tweetnacl": "^1.0.3"
   }
 }
